[package]
name = "dvr"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[[bin]]
name = "test-win"
path = "src/test_win.rs"

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.50"
js-sys = "0.3.77"
queues = "1.0.2"

[dependencies.windows]
version = "0.61"
features = [
	"Win32",
	"Win32_Graphics_Dxgi",
	"Win32_Graphics_Dxgi_Common",
	"Win32_Graphics_Direct3D",
	"Win32_Graphics_Direct3D11",
	"Win32_UI_WindowsAndMessaging",
]

[dependencies.web-sys]
version = "0.3.77"
features = [
	'Document',
	'Element',
	'HtmlImageElement',
	'HtmlCanvasElement',
	'WebGlBuffer',
	'WebGlVertexArrayObject',
	'WebGl2RenderingContext',
	'WebGlProgram',
	'WebGlShader',
	'WebGlUniformLocation',
	'WebGlTexture',
	'Window',
	'PointerEvent',
	'KeyboardEvent',
	'CompositionEvent',
	'console'
]
