[package]
name = "dvr"
version = "0.1.0"
edition = "2021"

[lib]
name = "dvr"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "test_win"

[dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4.50"
js-sys = "0.3.77"
queues = "1.0.2"
directx_math = "0.2.3"

[dependencies.windows]
version = "0.61"
features = [
	"Win32",
	"Win32_Graphics_Dxgi",
	"Win32_Graphics_Dxgi_Common",
	"Win32_Graphics_Direct3D",
	"Win32_Graphics_Direct3D11",
	"Win32_UI_WindowsAndMessaging",
	"Win32_System_Com",
	"Win32_Graphics_Imaging",
	"Win32_UI_Shell",
	"Win32_Graphics_Gdi",
	"Win32_UI_WindowsAndMessaging",
	"Win32_System_LibraryLoader",
]

[dependencies.windows-strings]
version = "0.4"

[dependencies.web-sys]
version = "0.3.77"
features = [
	'Document',
	'Element',
	'HtmlImageElement',
	'HtmlCanvasElement',
	'WebGlBuffer',
	'WebGlVertexArrayObject',
	'WebGl2RenderingContext',
	'WebGlProgram',
	'WebGlShader',
	'WebGlUniformLocation',
	'WebGlTexture',
	'Window',
	'PointerEvent',
	'KeyboardEvent',
	'CompositionEvent',
	'console'
]

[dependencies.uuid]
version = "1.18.0"
features = [
    "v4",
]
